test/loop/confidence/errors/comp_errors_1.loop
# Errors in pattern matching functions

func() ->
  x for in [1, 2, 3]

